Fix auth db, overflow wrapping

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -74,6 +74,7 @@ td {
 }
 
 .content {
+  overflow-wrap: break-word;
   margin: 0;
   padding: 0;
 }
